# roost_hsm

./: .gitignore  CMakeLists.txt  DevGuide.md  README.md
.github/workflows/: build-linux.yml
cmake/: googletest.cmake  hayai.cmake
docs/graphviz/: fsm.txt  fsm_error.txt  fsm_error_tree.txt  fsm_error_tree_initial_children.txt  fsm_error_tree_initial_children_top.txt  handle_region_flowchart.txt  lca.txt  leaf_and_composite_states.txt  ortho.txt  partial_transition_selection_algo.txt  transition_selection_algo.txt  transition_selection_execution.txt
docs/scxml/: example1.scxml  history.scxml  hsm_dcomposite.scxml  ortho.scxml
examples/: CMakeLists.txt  README.md
examples/example1/: CMakeLists.txt  b_sm.cpp  b_sm.hpp  common.cpp  common.hpp  e_sm.cpp  e_sm.hpp  example1_sm.cpp  example1_sm.hpp  main.cpp
examples/history/: CMakeLists.txt  common.cpp  common.hpp  history_sm.cpp  history_sm.hpp  main.cpp
examples/instastart/: CMakeLists.txt  main.cpp
examples/ortho/: CMakeLists.txt  common.cpp  common.hpp  main.cpp  ortho_sm.cpp  ortho_sm.hpp  regiona.cpp  regiona.hpp  regionc.cpp  regionc.hpp
examples/quickstart/: CMakeLists.txt  common.cpp  common.hpp  main.cpp  quickstart_sm.cpp  quickstart_sm.hpp
lib/: CMakeLists.txt
lib/include/roost/: alias.hpp  common.hpp  constants.hpp  node.hpp  spy.hpp  state_machine.hpp  transition_table.hpp
lib/src/: alias.cpp  common.cpp  constants.cpp  node.cpp  spy.cpp  state_machine.cpp  transition_table.cpp
lib/test/: CMakeLists.txt
lib/test/bench/: CMakeLists.txt  sample_bench.cpp
lib/test/share/join_sm/: join_sm.cpp  join_sm.hpp  join_sm_common.cpp  join_sm_common.hpp
lib/test/share/ortho_history/: ortho_history.cpp  ortho_history.hpp  ortho_history_common.cpp  ortho_history_common.hpp
lib/test/share/simple_history/: simple_history.cpp  simple_history.hpp  simple_history_common.cpp  simple_history_common.hpp
lib/test/share/sm1/: sm1.cpp  sm1.hpp  sm1_common.cpp  sm1_common.hpp
lib/test/share/sm2/: sm2.cpp  sm2.hpp  sm2_common.cpp  sm2_common.hpp
lib/test/unit/: CMakeLists.txt  main.cpp  roost_test.cpp
